tests/machine/x/ocaml/partial_application.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/partial_application.ml", line 22, characters 17-22:
22 | let add5 : int = add 5
                      ^^^^^
Warning 5 [ignored-partial-application]: this function application is partial,
maybe some arguments are missing.
File "/workspace/mochi/tests/machine/x/ocaml/partial_application.ml", line 22, characters 17-22:
22 | let add5 : int = add 5
                      ^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int


Context (around line 22):
  20 |   (a + b)
  21 | 
  22 | let add5 : int = add 5
  23 | 
  24 | let () =
